// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Summary component isSummaryCollapsable should render properly - with No isSummaryCollapsable 1`] = `
<DocumentFragment>
  <div
    class="govuk-!-margin-bottom-7"
  >
    <div
      class="lbh-table-header"
    >
      <h3
        class="lbh-heading-h2 section-heading"
      >
        First Step
      </h3>
    </div>
    <dl
      class="govuk-summary-list  lbh-summary-list"
    >
      <div
        class="govuk-summary-list__row"
      >
        <dt
          class="govuk-summary-list__key"
        >
          I am foo component
        </dt>
        <dd
          class="govuk-summary-list__value"
        >
          123
        </dd>
      </div>
    </dl>
  </div>
</DocumentFragment>
`;

exports[`Summary component isSummaryCollapsable should render properly - with isSummaryCollapsable 1`] = `
<DocumentFragment>
  <span
    class="govuk-link toggleAll"
    role="button"
  >
    Collapse all
  </span>
  <div
    class="govuk-!-margin-bottom-7"
  >
    <div
      class="lbh-table-header"
    >
      <h3
        class="lbh-heading-h2 section-heading"
      >
        First Step
      </h3>
      <span
        class="govuk-link govuk-link--underline"
        role="button"
      >
        Collapse view
      </span>
    </div>
    <dl
      class="govuk-summary-list  lbh-summary-list"
    >
      <div
        class="govuk-summary-list__row"
      >
        <dt
          class="govuk-summary-list__key"
        >
          I am foo component
        </dt>
        <dd
          class="govuk-summary-list__value"
        >
          123
        </dd>
      </div>
    </dl>
  </div>
</DocumentFragment>
`;

exports[`Summary component should render properly 1`] = `
<DocumentFragment>
  <div
    class="govuk-!-margin-bottom-7"
  >
    <div
      class="lbh-table-header"
    >
      <h3
        class="lbh-heading-h2 section-heading"
      >
        First Step
      </h3>
    </div>
    <dl
      class="govuk-summary-list  lbh-summary-list"
    >
      <div
        class="govuk-summary-list__row"
      >
        <dt
          class="govuk-summary-list__key"
        >
          I am foo component
        </dt>
        <dd
          class="govuk-summary-list__value"
        >
          123
        </dd>
      </div>
      <div
        class="govuk-summary-list__row"
      >
        <dt
          class="govuk-summary-list__key"
        >
          I am bar component
        </dt>
        <dd
          class="govuk-summary-list__value"
        >
          asd
        </dd>
      </div>
    </dl>
  </div>
  <div
    class="govuk-!-margin-bottom-7"
  >
    <div
      class="lbh-table-header"
    >
      <h3
        class="lbh-heading-h2 section-heading"
      >
        Second Step
      </h3>
    </div>
    <dl
      class="govuk-summary-list  lbh-summary-list"
    >
      <div
        class="govuk-summary-list__row"
      >
        <dt
          class="govuk-summary-list__key"
        >
          I am foobar component
        </dt>
        <dd
          class="govuk-summary-list__value"
        >
          asd
        </dd>
      </div>
    </dl>
  </div>
  <div
    class="govuk-!-margin-bottom-7"
  >
    <div
      class="lbh-table-header"
    >
      <h3
        class="lbh-heading-h2 section-heading"
      >
        Object Step
      </h3>
    </div>
    <dl
      class="govuk-summary-list  lbh-summary-list"
    >
      <div
        class="govuk-summary-list__row"
      >
        <dt
          class="govuk-summary-list__key"
        >
          I am object component
        </dt>
        <dd
          class="govuk-summary-list__value"
        >
          <div>
            <span>
              first
            </span>
            <br />
          </div>
          <div>
            <span>
              second
            </span>
            <br />
          </div>
          <div>
            <span>
              third
            </span>
            <br />
          </div>
        </dd>
      </div>
      <div
        class="govuk-summary-list__row"
      >
        <dt
          class="govuk-summary-list__key"
        >
          I am object component inline
        </dt>
        <dd
          class="govuk-summary-list__value"
        >
          <span>
            first 
          </span>
          <span>
            second 
          </span>
          <span>
            third 
          </span>
        </dd>
      </div>
    </dl>
  </div>
</DocumentFragment>
`;
